--- a/index.html
+++ b/index.html
@@ -1,12 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Journey Through the Solar System</title>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+
+    <!-- JQuery -->
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+
+    <!-- Container to hold our solar system images -->
+    <div class="container">
+
+    </div>
+
+    <!-- Container to hold each planet data card-->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Sun</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Mercury</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Venus</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Earth</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Mars</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Jupiter</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Saturn</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Uranus</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Neptune</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Pluto</h1>
+            </div>
+        </div>
+    </div>
+
+    <!-- Javascript file -->
+    <script src="assets/javascript/app.js"></script>
+
 </body>
+
 </html>
