--- a/index.html
+++ b/index.html
@@ -16,20 +16,34 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <!-- JQuery -->
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
+    <script
+  src="http://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 </head>
 
 <body>
 
     <!-- Container to hold our solar system images -->
     <div class="container">
-        <h1>Journey Through the Solar System</h1>
-
+        <div class="row">
+            <div class="col-md-12">
+                <img src="assets/images/sun.png" id="sun">
+                <img src="assets/images/mercury.png" id="mercury">
+                <img src="assets/images/venus.png" id="venus">
+                <img src="assets/images/earth.png" id="earth">
+                <img src="assets/images/mars.png" id="mars">
+                <img src="assets/images/jupiter.png" id="jupiter">
+                <img src="assets/images/saturn.png" id="saturn">
+                <img src="assets/images/uranus.png" id="uranus">
+                <img src="assets/images/neptune.png" id="neptune">
+                <img src="assets/images/pluto.png" id="pluto">
+            </div>
+        </div>
     </div>
 
     <!-- Container to hold each planet data card-->
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <h1>Sun</h1>
@@ -80,7 +94,7 @@
                 <h1>Pluto</h1>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Javascript file -->
     <script src="assets/javascript/app.js"></script>
