--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12" id="planet-row">
             <img src="assets/images/sun.png" class="planet" id="sun">
             <img src="assets/images/mercury.png" class="planet" id="mercury">
             <img src="assets/images/venus.png" class="planet" id="venus">
