added hover effect

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+
     <!-- JQuery -->
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
@@ -22,18 +25,20 @@
 
 <body>
 
+    <header>Journey Through the Solar System</header>
+
     <div class="row">
         <div class="col-md-12" id="planet-row">
-            <img src="assets/images/sun.png" class="planet" id="sun">
-            <img src="assets/images/mercury.png" class="planet" id="mercury">
-            <img src="assets/images/venus.png" class="planet" id="venus">
-            <img src="assets/images/earth.png" class="planet" id="earth">
-            <img src="assets/images/mars.png" class="planet" id="mars">
-            <img src="assets/images/jupiter.png" class="planet" id="jupiter">
-            <img src="assets/images/saturn.png" class="planet" id="saturn">
-            <img src="assets/images/uranus.png" class="planet" id="uranus">
-            <img src="assets/images/neptune.png" class="planet" id="neptune">
-            <img src="assets/images/pluto.png" class="planet" id="pluto">
+            <img src="assets/images/sun.png" class="planet grow" id="sun">
+            <img src="assets/images/mercury.png" class="planet grow" id="mercury">
+            <img src="assets/images/venus.png" class="planet grow" id="venus">
+            <img src="assets/images/earth.png" class="planet grow" id="earth">
+            <img src="assets/images/mars.png" class="planet grow" id="mars">
+            <img src="assets/images/jupiter.png" class="planet grow" id="jupiter">
+            <img src="assets/images/saturn.png" class="planet grow" id="saturn">
+            <img src="assets/images/uranus.png" class="planet grow" id="uranus">
+            <img src="assets/images/neptune.png" class="planet grow" id="neptune">
+            <img src="assets/images/pluto.png" class="planet grow" id="pluto">
         </div>
     </div>
 
