--- a/index.html
+++ b/index.html
@@ -33,9 +33,35 @@
 <body>
 
     <header>Journey Through the Solar System</header>
-    <p>Click on a planet to learn more about it!</p>
+    <p>Click on a celestial body to learn more about it!</p>
 
-    <!-- VISITORS FROM EARTH MODAL ====================================================================== -->
+    <!-- PIC OF DAY MODAL -->
+    <!-- ====================================================================== -->
+    <!-- Trigger the modal with a button -->
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#picModal" id="picture-of-day">Click
+        for NASA's Pic of the Day!</button>
+    <!-- Modal -->
+    <div class="modal fade bd-example-modal-lg" id="picModal" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">NASA Picture of the Day</h4>
+                    <button type="button" class="close" data-dismiss="modal">X</button>
+                </div>
+                <div class="modal-body">
+                    <div id="pic-container"></div>
+                    <div id="pic-caption"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="close">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- VISITORS FROM EARTH MODAL -->
+    <!-- ====================================================================== -->
     <div class="row">
         <div class="col-md-12" id="input-fields">
             <div><input type="text" placeholder="Name" id="name-input"></div>
@@ -51,15 +77,15 @@
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">How Old Are You On Each Planet?</h4>
-                    <button type="button" class="close" data-dismiss="modal">X</button>                
+                    <h4 class="modal-title">How Old Are You On Each Planet (in Earth Years)?</h4>
+                    <button type="button" class="close" data-dismiss="modal">X</button>       
                 </div>
                 <div class="modal-body">
-                    <table id="planet-age-table">
+                    <table class="table table-striped table-dark" id="planet-age-table">
                         <thead>
                             <tr>
                                 <th scope="col">Name</th>
-                                <th scope="col">Earth Age</th>
+                                <th scope="col">Earth</th>
                                 <th scope="col">Mercury</th>
                                 <th scope="col">Venus</th>
                                 <th scope="col">Mars</th>
@@ -75,47 +101,24 @@
                     </table>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="close">Close</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- PIC OF DAY MODAL ====================================================================== -->
-    <!-- Trigger the modal with a button -->
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#picModal" id="picture-of-day">Click
-        for Pic of the Day!</button>
-    <!-- Modal -->
-    <div class="modal fade bd-example-modal-lg" id="picModal" role="dialog">
-        <div class="modal-dialog modal-lg">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">NASA Picture of the Day</h4>
-                    <button type="button" class="close" data-dismiss="modal">X</button>
-                </div>
-                <div class="modal-body">
-                    <div id="pic-container"></div>
-                    <div id="pic-caption"></div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- PLANET MODAL ====================================================================== -->
+    <!-- PLANET MODAL -->
+    <!-- ====================================================================== -->
     <!-- Modal -->
     <div class="modal fade bd-example-modal-lg" id="planetModal" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Planet Data</h4>
+                    <h4 class="modal-title">Celestial Data</h4>
                     <button type="button" class="close" data-dismiss="modal">X</button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" id="planet-card">
                     <h2 id="planet-title"></h2>
                     <div id="planet-day-length"></div>
                     <div id="planet-year-length"></div>
@@ -127,20 +130,21 @@
                     <div id="planet-chemicals"></div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="close-button">Close</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- SUN MODAL ====================================================================== -->
+    <!-- SUN MODAL -->
+    <!-- ====================================================================== -->
     <!-- Modal -->
     <div class="modal fade bd-example-modal-lg" id="sunModal" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Sun Data</h4>
+                    <h4 class="modal-title">Celestial Data</h4>
                     <button type="button" class="close" data-dismiss="modal">X</button>
                 </div>
                 <div class="modal-body">
@@ -151,12 +155,14 @@
                     <div id="sun-lifespan"></div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="close">Close</button>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Planet images -->
+    <!-- ====================================================================== -->
     <div class="row">
         <div class="col-md-12" id="planet-row">
             <img src="assets/images/sun.png" class="grow" id="sun" data-toggle="modal" data-target="#sunModal">
@@ -171,75 +177,6 @@
             <img src="assets/images/pluto.png" class="planet grow" id="pluto" data-toggle="modal" data-target="#planetModal">
         </div>
     </div>
-
-    <!-- <div class="container" id="data-cards">
-        <div class="row">
-            <div class="col-md-12" id="sun-card">
-                <h2 id="sun-title"></h2>
-                <div id="sun-distance-from-earth"></div>
-                <div id="sun-temp"></div>
-                <div id="sun-age"></div>
-                <div id="sun-lifespan"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12" id="planet-card">
-                <h2 id="planet-title"></h2>
-                <div id="planet-day-length"></div>
-                <div id="planet-year-length"></div>
-                <div id="planet-distance-from-sun"></div>
-                <div id="planet-mass"></div>
-                <div id="planet-temp"></div>
-                <div id="planet-radius"></div>
-                <div id="planet-moons"></div>
-                <div id="planet-chemicals"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <h2 id="pluto-title"></h2>
-                <div id="pluto-day-length"></div>
-                <div id="pluto-year-length"></div>
-                <div id="pluto-distance-from-sun"></div>
-                <div id="pluto-mass"></div>
-                <div id="pluto-temp"></div>
-                <div id="pluto-radius"></div>
-                <div id="pluto-moons"></div>
-                <div id="pluto-chemicals"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <table id="planet-age-table">
-                    <thead>
-                        <tr>
-                            <th scope="col">Name</th>
-                            <th scope="col">Earth Age</th>
-                            <th scope="col">Mercury</th>
-                            <th scope="col">Venus</th>
-                            <th scope="col">Mars</th>
-                            <th scope="col">Jupiter</th>
-                            <th scope="col">Saturn</th>
-                            <th scope="col">Uranus</th>
-                            <th scope="col">Neptune</th>
-                            <th scope="col">Pluto</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div id="pic-container"></div>
-                <div id="pic-caption"></div>
-            </div>
-            <div class="col-md-12">
-                <div><button id="picture-of-day">Click for Pic of the Day!</button></div>
-            </div>
-        </div>
-    </div> -->
 
     <!-- Javascript file -->
     <script src="assets/javascript/app.js"></script>
